# LZ_compressor

./: CMakeLists.txt  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.dorus-pc_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.dorus-pc_0/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.dorus-pc_0/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Data/: Lorem.txt
LZ_compressor/: .cproject  .project
LZ_compressor/Data/: output.lz
LZ_compressor/include/: LZ_78.h  LZ_main.h  bit_IO.h
LZ_compressor/src/: LZ_78.cc  LZ_W.cc  bit_IO.cc  fastLZ_W.cc
LZ_compressor/src/backup/: LZ_78.cc  LZ_main.cc
include/: LZ_W.h  compressor.h
src/: LZ_main.cc
src/backup/: LZ_W.cc
